--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="10">
     <th>
-      <td><img size="10" src="/Users/Zamirbek/Desktop/Web Development/HTML - Personal Site/Images/zamirbekseaside3.png" alt=" Zamirbek profile picture">
+      <td><img size="10" src="zamirbekseaside3.png" alt=" Zamirbek profile picture">
 </td>
       <td>  <h1>Zamirbek Mamasydykov</h1>
           <p>The Founder and CTO of <em><strong><a href="https://en.wikipedia.org/wiki/Ala-Too_Square">The App Alatoo</a></strong></em></p>
